--- a/doc/게시판.md
+++ b/doc/게시판.md
@@ -1,1 +1,129 @@
-.
+## 1. 게시글 작성 (Create)
+
+#### 기능명 : 게시글 작성
+#### 상세기능 설명 : 게시글 작성 
+
+#### 요청메시지 명세 (파라미터)
+
+|항목명(영문)|항목명(국문)|필수여부|샘플데이터|비고|
+|---|---|---|---|---|
+|title| 글 제목 |o|안녕하세요|글 제목|
+|memberId| 멤버의 id |o| 2 |회원의 식별 pk|
+|context| 글 내용 | o | 안녕하세요 | 글의 내용|
+|boardType|게시판 타입|o|자유게시판|게시판 카테고리|
+
+
+request 예시
+![image](https://user-images.githubusercontent.com/43841476/169244331-96a8eb51-58c2-4561-89e0-a3ccbe5381b7.png)
+
+
+
+
+#### 응답메시지 명세 (파라미터)
+
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+|statusCode| http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|게시글 저장 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+
+
+![image](https://user-images.githubusercontent.com/43841476/169244405-7f227f0f-bb60-4312-a18d-09762a63d860.png)
+
+
+
+
+
+
+## 2. 전체 게시글 조회  (Read)
+
+#### 기능명 : 전체 게시글 조회
+#### 상세기능 설명 : 전체 게시글 조회 서비스
+
+#### 요청메시지 명세 (파라미터)
+
+요청 파라미터가 필요 하지 않습니다.
+
+!![image](https://user-images.githubusercontent.com/43841476/169244866-f8a977d8-b003-45e1-80f5-1a3b002f529a.png)
+
+
+#### 응답메시지 명세 (파라미터)
+
+!![image](https://user-images.githubusercontent.com/43841476/169244866-f8a977d8-b003-45e1-80f5-1a3b002f529a.png)
+
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+|statusCode| http 상태 코드 | 200 |
+|responseMessage|성공 여부 확인 메시지| 회원 정보 조회 성공 |
+| data| 전송 받을 데이터| [{"id": 2,"rowNum": 0,"title": "안녕하세요3","memberId": 3,"memberNickName": "jojojo","pubTime": [ 2022, 5,19,17,3,45, 478152000], "modTime": [2022,5,19,17,3,45,478160000],"context": "안녕하세요", "views": 0, "good": 0,"bad": 0, "boardType": "자유게시판", "comments": [],"imageList": [],"reportCount": 0} ]|
+
+
+
+
+
+## 3. 하나의 게시글 조회 (Read)
+
+#### 기능명 : 하나의 게시글 조회
+#### 상세기능 설명 : 하나의 게시글 조회
+
+#### 요청메시지 명세 예시 (파라미터)
+
+![image](https://user-images.githubusercontent.com/43841476/169246002-b7983a2b-db68-4303-aa4a-42da12943dae.png)
+
+#### 응답메시지 명세 예시 (파라미터)
+
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+|statusCode| http 상태 코드 | 200 |
+|responseMessage|성공 여부 확인 메시지| 회원 정보 조회 성공 |
+| data| 전송 받을 데이터| [{"id": 2,"rowNum": 0,"title": "안녕하세요3","memberId": 3,"memberNickName": "jojojo","pubTime": [ 2022, 5,19,17,3,45, 478152000], "modTime": [2022,5,19,17,3,45,478160000],"context": "안녕하세요", "views": 0, "good": 0,"bad": 0, "boardType": "자유게시판", "comments": [],"imageList": [],"reportCount": 0} ]|
+
+## 4. 게시글 수정(Update)
+
+#### 기능명 : 게시글 수정
+#### 상세기능 설명 : 게시글 수정 
+
+#### 요청메시지 명세 예시 (파라미터)
+
+|항목명(영문)|항목명(국문)|필수여부|샘플데이터|비고|
+|---|---|---|---|---|
+|title| 글 제목 |o|안녕하세요|글 제목|
+|memberId| 멤버의 id |o| 2 |회원의 식별 pk|
+|context| 글 내용 | o | 안녕하세요 | 글의 내용|
+|boardType|게시판 타입|o|자유게시판|게시판 카테고리|
+
+![image](https://user-images.githubusercontent.com/43841476/169247019-baf7dd3e-d445-42aa-ad8b-e60653bae55a.png)
+
+#### 응답메시지 명세 예시 (파라미터)
+
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+|statusCode| http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|게시글 수정 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+
+![image](https://user-images.githubusercontent.com/43841476/169247294-4dd3a2f4-db89-4868-9945-33a2729fef94.png)
+
+
+## 4. 회원 정보 삭제(Delete)
+
+#### 기능명 : 회원 탈퇴
+#### 상세기능 설명 : 개인 회원 정보 삭제 
+
+#### 요청메시지 명세 예시 (파라미터)
+
+
+
+요청 파라미터가 필요하지 않습니다.
+![image](https://user-images.githubusercontent.com/43841476/169247485-4b236e5c-59e9-4f87-a91b-fa21fe5b0994.png)
+
+#### 응답메시지 명세 예시 (파라미터)
+|statusCode| http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|게시글 삭제 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+![image](https://user-images.githubusercontent.com/43841476/169247505-387e7a44-213d-4f06-bcb9-78943bc2f997.png)
+
+
+
+
+
