--- a/doc/댓글.md
+++ b/doc/댓글.md
@@ -1,1 +1,129 @@
-.
+## 1. 댓글 작성 (Create)
+
+#### 기능명 : 댓글 작성
+#### 상세기능 설명 : 댓글 작성 
+
+#### 요청메시지 명세 (파라미터)
+
+|항목명(영문)|항목명(국문)|필수여부|샘플데이터|비고|
+|---|---|---|---|---|
+|context| 댓글 내용 |o|댓글 1 입니다.|댓글 내용|
+|memberId| 작성자의 id |o| 2 |작성자의 식별키 pk|
+|boardId| 작성된 댓글의 글번호| o | 3 | 작성된 댓글의 게시글의 번호|
+|parentId| 댓글의 상위 댓글의 id |o|자유게시판| 댓글의 상위 댓글의 pk값(최상위 댓글일 경우 null) |
+
+
+request 예시
+![image](https://user-images.githubusercontent.com/43841476/169251479-f6d57f5c-8d5e-4f86-8287-8d19f2259c43.png)
+
+
+
+
+#### 응답메시지 명세 (파라미터)
+
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+|statusCode| http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|댓글 저장 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+
+
+![image](https://user-images.githubusercontent.com/43841476/169252079-b3f794fe-a8c8-47d9-8578-1708627b28a1.png)
+
+
+
+
+
+
+## 2. 댓글 조회  (Read)
+
+#### 기능명 : 댓글 조회
+#### 상세기능 설명 : 댓글 조회 서비스
+
+
+
+###댓글 조회는 게시글을 조회 할 경우 같이 종속적으로 조회 됩니다.
+
+예시)
+3번 게시글을 조회 요청하였을 경우
+![image](https://user-images.githubusercontent.com/43841476/169252582-53d7a175-2d35-410b-8e3a-e95b6e48add6.png)
+
+그에 따른 게시글의 comment의 내용을 조회 할 수 있음.
+
+![image](https://user-images.githubusercontent.com/43841476/169252412-d750d831-e678-4bde-8d27-9b0f4361df13.png)
+
+
+
+
+## 3. 댓글 수정 (Update)
+
+#### 기능명 : 댓글 수정
+#### 상세기능 설명 : 댓글 수정
+
+#### 요청메시지 명세 예시 (파라미터)
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+| context | 댓글 내용 | 바뀐 댓글 입니다. |  수정할 댓글의 내용|
+
+![image](https://user-images.githubusercontent.com/43841476/169254823-cce92031-53e2-464b-9fdb-ba5a3ca67eb3.png)
+
+#### 응답메시지 명세 예시 (파라미터)
+
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+| statusCode | http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|게시글 수정 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+
+![image](https://user-images.githubusercontent.com/43841476/169256619-90db6b92-96c3-4574-8ced-47198c0a8f47.png)
+
+
+## 4. 게시글 수정(Update)
+
+#### 기능명 : 게시글 수정
+#### 상세기능 설명 : 게시글 수정 
+
+#### 요청메시지 명세 예시 (파라미터)
+
+|항목명(영문)|항목명(국문)|필수여부|샘플데이터|비고|
+|---|---|---|---|---|
+|title| 글 제목 |o|안녕하세요|글 제목|
+|memberId| 멤버의 id |o| 2 |회원의 식별 pk|
+|context| 글 내용 | o | 안녕하세요 | 글의 내용|
+|boardType|게시판 타입|o|자유게시판|게시판 카테고리|
+
+![image](https://user-images.githubusercontent.com/43841476/169247019-baf7dd3e-d445-42aa-ad8b-e60653bae55a.png)
+
+#### 응답메시지 명세 예시 (파라미터)
+
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+|statusCode| http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|게시글 수정 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+
+![image](https://user-images.githubusercontent.com/43841476/169247294-4dd3a2f4-db89-4868-9945-33a2729fef94.png)
+
+
+## 4. 회원 정보 삭제(Delete)
+
+#### 기능명 : 회원 탈퇴
+#### 상세기능 설명 : 개인 회원 정보 삭제 
+
+#### 요청메시지 명세 예시 (파라미터)
+
+
+
+요청 파라미터가 필요하지 않습니다.
+![image](https://user-images.githubusercontent.com/43841476/169247485-4b236e5c-59e9-4f87-a91b-fa21fe5b0994.png)
+
+#### 응답메시지 명세 예시 (파라미터)
+|statusCode| http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|게시글 삭제 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+![image](https://user-images.githubusercontent.com/43841476/169247505-387e7a44-213d-4f06-bcb9-78943bc2f997.png)
+
+
+
+
+
