--- a/doc/댓글.md
+++ b/doc/댓글.md
@@ -14,6 +14,7 @@
 
 
 request 예시
+
 ![image](https://user-images.githubusercontent.com/43841476/169251479-f6d57f5c-8d5e-4f86-8287-8d19f2259c43.png)
 
 
@@ -29,8 +30,6 @@ request 예시
 
 
 ![image](https://user-images.githubusercontent.com/43841476/169252079-b3f794fe-a8c8-47d9-8578-1708627b28a1.png)
-
-
 
 
 
@@ -61,6 +60,7 @@ request 예시
 #### 상세기능 설명 : 댓글 수정
 
 #### 요청메시지 명세 예시 (파라미터)
+
 |항목명(영문)|항목명(국문)|샘플데이터|비고|
 |---|---|---|---|
 | context | 댓글 내용 | 바뀐 댓글 입니다. |  수정할 댓글의 내용|
@@ -78,50 +78,20 @@ request 예시
 ![image](https://user-images.githubusercontent.com/43841476/169256619-90db6b92-96c3-4574-8ced-47198c0a8f47.png)
 
 
-## 4. 게시글 수정(Update)
+## 4. 댓글 삭제(Delete)
 
-#### 기능명 : 게시글 수정
-#### 상세기능 설명 : 게시글 수정 
-
-#### 요청메시지 명세 예시 (파라미터)
-
-|항목명(영문)|항목명(국문)|필수여부|샘플데이터|비고|
-|---|---|---|---|---|
-|title| 글 제목 |o|안녕하세요|글 제목|
-|memberId| 멤버의 id |o| 2 |회원의 식별 pk|
-|context| 글 내용 | o | 안녕하세요 | 글의 내용|
-|boardType|게시판 타입|o|자유게시판|게시판 카테고리|
-
-![image](https://user-images.githubusercontent.com/43841476/169247019-baf7dd3e-d445-42aa-ad8b-e60653bae55a.png)
-
-#### 응답메시지 명세 예시 (파라미터)
-
-|항목명(영문)|항목명(국문)|샘플데이터|비고|
-|---|---|---|---|
-|statusCode| http 상태 코드| 200 |
-|responseMessage| 성공 여부 확인 메시지|게시글 수정 성공|
-|data| 전송 받을 데이터(필요 시) default값은 null | null |
-
-![image](https://user-images.githubusercontent.com/43841476/169247294-4dd3a2f4-db89-4868-9945-33a2729fef94.png)
-
-
-## 4. 회원 정보 삭제(Delete)
-
-#### 기능명 : 회원 탈퇴
-#### 상세기능 설명 : 개인 회원 정보 삭제 
+#### 기능명 : 댓글 삭제
+#### 상세기능 설명 : 댓글 삭제
 
 #### 요청메시지 명세 예시 (파라미터)
 
-
-
-요청 파라미터가 필요하지 않습니다.
-![image](https://user-images.githubusercontent.com/43841476/169247485-4b236e5c-59e9-4f87-a91b-fa21fe5b0994.png)
+![image](https://user-images.githubusercontent.com/43841476/169443935-ee3f5223-bb05-4414-85c8-b0f77dfe0f4a.png)
 
 #### 응답메시지 명세 예시 (파라미터)
-|statusCode| http 상태 코드| 200 |
-|responseMessage| 성공 여부 확인 메시지|게시글 삭제 성공|
-|data| 전송 받을 데이터(필요 시) default값은 null | null |
-![image](https://user-images.githubusercontent.com/43841476/169247505-387e7a44-213d-4f06-bcb9-78943bc2f997.png)
+
+![image](https://user-images.githubusercontent.com/43841476/169443960-55a9c380-d7e8-4967-ba0b-e619b78d8e58.png)
+
+
 
 
 
