--- a/doc/댓글.md
+++ b/doc/댓글.md
@@ -89,7 +89,16 @@ request 예시
 
 #### 응답메시지 명세 예시 (파라미터)
 
-![image](https://user-images.githubusercontent.com/43841476/169443960-55a9c380-d7e8-4967-ba0b-e619b78d8e58.png)
+|항목명(영문)|항목명(국문)|샘플데이터|비고|
+|---|---|---|---|
+| statusCode | http 상태 코드| 200 |
+|responseMessage| 성공 여부 확인 메시지|게시글 삭제 성공|
+|data| 전송 받을 데이터(필요 시) default값은 null | null |
+
+
+#### 삭제 완료 된 모습
+
+![image](https://user-images.githubusercontent.com/43841476/169444107-bfeaf292-8c1a-4cc9-a319-a7011af21c93.png)
 
 
 
